# rust-morse

./: Cargo.toml  README.md  de-DE.mo  de-DE.po  en-EN.mo  en-US.mo  en-US.po  es-ES.mo  es-ES.po  fr-FR.mo  fr-FR.po  license.txt  morse
.github/workflows/: .release_source.yml.swo  .release_source.yml.swp  .release_windows_x86_64.yml.swp  build.yml  build.yml.20250804  build.yml.dave  delete.yml  delete.yml.old  release_all.yml  release_linux_i686.yml  release_linux_i686.yml.org  release_linux_x86_64.yml  release_linux_x86_64_musl.yml  release_macos.yml  release_macos_aarch.yml  release_macos_aarch.yml.org  release_macos_aarch64.yml  release_macos_x86_64.yml  release_multiple.yml  release_source.yml  release_source.yml.nOK  release_source.yml.org  release_win.yml  release_win.yml.org  release_win_x86.yml  release_win_x86.yml.org  release_windows_aarch64.yml  release_windows_i686.yml  release_windows_x86_64.yml  rust.yml  rust.yml.nOK  rust.yml.org
src/: main.rs
