[package]
name = "morse"
version = "0.0.1"
edition = "2024"
authors = ["Dennis Schneck", "dd6ds@eclipso.de"]
license = "MIT"
license-file = "license.txt"
description = "A little Morse Program"
repository = "https://github.com/dd6ds/rust-morse/"

[dependencies]
compile-time = "0.2.0"
current_platform = "0.2.0"
fltk = "1.5.13"
gettext-ng = "0.4.1"
once_cell = "1.21.3"
rodio = "0.21.1"
sys-locale = "0.3.2"

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
